# pallas-flexattn

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  remote_run.sh
src/pallas_flexattn/: __init__.py  benchmark.py  block_mask.py  flash_attn.py  kernel_tuner.py  mask_mod.py
tests/: __init__.py  test_block_mask.py  test_flash_attn.py  test_kernel_tuner.py
