[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pallas-flexattn"
version = "0.1.0"
description = "FlexAttention implementation in JAX/Pallas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax==0.8.3",
    "jaxlib==0.8.3",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]==0.8.3",
]
tpu = [
    "jax[tpu]==0.8.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.6.0",
    "mypy>=1.0",
]

[tool.hatch.build]
packages = ["src/pallas_flexattn"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
